working code, manually tested
